  - Enhancement  #1129 Skins: XSL parameters instead of variables (preferences.xsl)
  - Fixed defect #1130 YAMJ gives a titleless episode 00 the same title as episode 01
  - Enhancement  #1136 Retry downloading incomplete images (Artwork)
  - Enhancement  #1140 Add WEB-DL and iTunes to list of source keywords
  - Fixed defect #1147 Trailer tag in NFO being interpreted as an EXTRA by YAMJ
  - Enhancement        Default skin: Highlighting of current category
  - Enhancement        Default skin: "T9"-navigation over title first letters  

MovieJukebox 1.6
----------------
  - Enhancement   #777 Override file for moviejukebox.properties 
  - Fixed defect  #881 Custom image always picking season 1 for the "BOX set" image for escaped series names.
  - Enhancement   #955 Option to download SERIES banners instead of SEASON
  - Enhancement   #970 Updated/improved threading functionality to increase stability & throttle downloads on a per site basis
  - Enhancement  #1005 Download different banners for different seasons
  - Enhancement  #1010 Enable the use of Set banners for BoxedSets
  - Enhancement  #1017 Output YAMJ revision number for Beta builds
  - Fixed defect #1043 Multiple bugs with SratimPlugin
  - Fixed defect #1045 Banners not downloaded if Local Poster file exists
  - Enhancement  #1037 Added Norwegian language to filename scanner
  - Fixed defect #1046 With "play full BluRay disks" selected, audio and video details are UNKNOWN
  - Enhancement  #1048 Ignore special movie versions from filename: "Directors Cut", "Extended Cut" etc.
  - Enhancement  #1052 Append date & time to error log filename
  - Enhancement  #1040 New NMT file path for PCH C-200
  - Fixed defect #1053 Allocine search engine and layout has changed, plugin broken.
  - Enhancement  #1055 Output all errors to log file as well as console
  - Fixed defect #1058 Bug command line -p parameter no longer works properly
  - Fixed defect #1053 Allocine search engine and layout has changed, plugin broken.